--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,32 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:orientation="vertical"
+    android:background="#000000"
     >
 
     <ImageView
-        android:layout_width="170dp"
-        android:layout_height="170dp" />
+        android:id="@+id/logoApp"
+        android:layout_width="@dimen/ancho_logo"
+        android:layout_height="@dimen/ancho_logo"
+        android:layout_centerInParent="true"
+        />
+    <TextView
+        android:id="@+id/txt_spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/textoSpinner"
+        android:layout_below="@id/logoApp"
+        android:textColor="#ffffff"
+        />
     <Spinner
         android:id="@+id/spinnerInicial"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/txt_spinner"
+        android:background="#ffffff"
         />
 
-</LinearLayout>
+</RelativeLayout>
